# Nexus_4WD_Mecanum_Robot

./: README.md  frames_2025-10-31_19.49.40.gv  frames_2025-10-31_20.31.47.gv  frames_2025-10-31_20.48.45.gv  frames_2025-12-14_21.45.49.gv  frames_2025-12-14_22.09.29.gv  frames_2025-12-14_22.14.42.gv
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/arduino_to_node/lib/arduino_to_node/: serial_reader_node
log/: latest_build
nexus_arduino/RB011_Omni4WD_PID_4SONAR/: RB011_Omni4WD_PID_4SONAR.ino
nexus_arduino/sketch_nexus/: sketch_nexus.ino  upload_sketch.sh
nexus_arduino/test_nexus/: test_nexus.ino
src/: analyze_odom.py  odom_eval_node.py  odom_eval_results.csv
src/arduino_to_node/: package.xml  setup.cfg  setup.py
src/arduino_to_node/arduino_to_node/: serial_reader_node.py
src/bumperbot_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/bumperbot_description/launch/: display.launch.py  gazebo.launch.py
src/bumperbot_description/rviz/: display.rviz
src/bumperbot_description/urdf/: bumperbot.urdf.xacro  bumperbot_gazebo.xacro
src/nexus_bringup/: package.xml  setup.cfg  setup.py
src/nexus_bringup/config/: ekf_localization.yaml  madgwick_params.yaml  mapper_params_online_async.yaml  nav2_params.yaml  params.yaml  twist_mux.yaml
src/nexus_bringup/launch/: backup_bringup.launch.py  nexus_bringup.launch.py  rviz_launch.py
src/nexus_bringup/maps/: warehouse_speed.yaml
src/nexus_bringup/nexus_bringup/: send_goal.py
src/nexus_bringup/scripts/: send_goal.py
src/nexus_control/: package.xml  setup.cfg  setup.py
src/nexus_control/config/: nexus_4wd_mecanum_controllers.yaml  ps4-holonomic.yaml
src/nexus_control/nexus_control/: move_with patterns.py  move_with_coordinates.py  nexus_move_node.py  nexus_twist_node.py  twist_tester.py
src/nexus_description/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/nexus_description/launch/: display.launch.py  gazebo.launch.py
src/nexus_description/rviz/: display.rviz
src/nexus_description/urdf/: nexus_4wd_mecanum.urdf.xacro  nexus_4wd_mecanum_gazebo.xacro  nexus_4wd_mecanum_ros2_control.xacro
src/nexus_odom/: package.xml  setup.cfg  setup.py
src/nexus_odom/config/: odom_params.yaml
src/nexus_odom/nexus_odom/: nexus_odom_node.py
src/nexus_serial_conn/: package.xml  setup.cfg  setup.py
src/nexus_serial_conn/config/: serial_conn.yaml
src/nexus_serial_conn/nexus_serial_conn/: nexus_serial_conn_node.py
src/nexus_tf_broadcaster/: package.xml  setup.cfg  setup.py
src/nexus_tf_broadcaster/nexus_tf_broadcaster/: odom_tf_broadcaster.py
src/ros_arduino_conn/: package.xml  setup.cfg  setup.py
src/ros_arduino_conn/config/: params.yaml  ps4-holonomic.yaml
src/ros_arduino_conn/launch/: cmd_vel_to_serial.launch.py
src/ros_arduino_conn/ros_arduino_conn/: cmd_vel_to_serial.py  move_robot_node.py  odom_nexus_node.py  serial_conn_node.py  twist_nexus_node.py
(+43 files in other folders)
