<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="54359353+OsamahShamsan@users.noreply.github.com">mecroka</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>threading</depend>
  <depend>sys</depend>
  <depend>termios</depend>
  <depend>tty</depend>
  <depend>time</depend>
  
  
  <exec_depend>pyserial</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <exec_depend>tf_transformations</exec_depend>

  <!-- Optional for TF broadcasting -->
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
