<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nexus_bringup</name>
  <version>0.0.0</version>
  <description>Launch package for Nexus robot bringup</description>
  <maintainer email="54359353+OsamahShamsan@users.noreply.github.com">mecroka</maintainer>
  <license>MIT</license>

  <!-- Required for running launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
